--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
     "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
     "rules": {
-        "prettier/prettier": true
+        "prettier/prettier": true,
+        "selector-class-pattern": null
     }
 }
