--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "author": "",
     "dependencies": {
         "@aktiv/launcher": "^1.0.5",
+        "antd": "^4.21.7",
         "react": "^17.0.2",
+        "react-chrono": "^1.17.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
