--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
               uses: actions/setup-node@v3 # 配置脚本来自 https://github.com/actions/setup-node
               with:
                   node-version: '14'
-            - run: npm install @aktiv/cli
+            - run: npm install @aktiv/cli -g
             - name: Install pnpm
-              uses: pnpm/action-setup@v2.0.1
+              uses: pnpm/action-setup@v2.2.2
               id: pnpm-install
               with:
                   version: 6
